adding show hide capability to ember app

--- a/packages/ui/app/templates/application.hbs
+++ b/packages/ui/app/templates/application.hbs
@@ -1,3 +1,4 @@
+<CloseButton>Close</CloseButton>
 {{!-- The following component displays Ember's default welcome message. --}}
 <WelcomePage />
 {{!-- Feel free to remove this! --}}
