--- a/packages/ui/app/styles/app.css
+++ b/packages/ui/app/styles/app.css
@@ -5,6 +5,8 @@ body {
   height: 100%;
   margin: 0;
   background-color: rgba(0, 0, 0, 0.85);
+  /* this is awesome but not very performant */
+  backdrop-filter: blur(5px);
   color: rgba(255, 255, 255, 0.75);
 }
 
