--- a/packages/ui/app/components/close-button.hbs
+++ b/packages/ui/app/components/close-button.hbs
@@ -1,3 +1,3 @@
-<button {{on "click" this.close}} class="close" title="Close">
+<button {{on "click" this.close}} class="close" title="Close" type="button">
   ×
 </button>
