added ability to set project from home screen

--- a/packages/ui/app/components/dashboard.hbs
+++ b/packages/ui/app/components/dashboard.hbs
@@ -2,6 +2,9 @@
   {{did-insert this.setScrollPosition this.logger.messages}}>
   <div class="buttons">
     <CloseButton />
+    <button type="button" class="home-btn" {{on 'click' this.home}}>
+      Manage Projects
+    </button>
     <button type="button" class="restart-btn" {{on 'click' this.restart}}>
       Restart Builder
     </button>
