--- a/packages/ui/app/components/project-selector.hbs
+++ b/packages/ui/app/components/project-selector.hbs
@@ -1,6 +1,6 @@
 <div>
-  {{#if this.projects.initialize.isRunning}}
-  Starting up...
+  {{#if this.initialize.isRunning}}
+  Loading projects...
   {{else}}
   <h3>Available Projects</h3>
   <div class="projects">
@@ -15,6 +15,11 @@
     </div>
     {{/each}}
   </div>
-  <button onclick={{action startSelectedProject}}>Start</button>
+  {{#if this.projects.start.isRunning}}
+  <div>Starting...</div>
+  {{else}}
+  <button onclick={{action startSelectedProject}}
+    disabled={{if (eq this.selectedProjects.length 0) 'true'}}>Start</button>
+  {{/if}}
   {{/if}}
 </div>
