--- a/packages/ui/app/components/project-selector.hbs
+++ b/packages/ui/app/components/project-selector.hbs
@@ -28,7 +28,7 @@
     <label class="assigner">
       <Input @type="radio" @name="bundle-strategy" class="maximum-assigner" @checked={{eq
         this.selectedStrategy "maximum" }} {{on 'click' (fn this.setStrategy "maximum" )}} />
-      <span class="bundle-strategy">Maximum amount of bundles (aka snowpack)</span>
+      <span class="bundle-strategy">Unbundled (aka snowpack)</span>
     </label>
     <label class="assigner">
       <Input @type="radio" @name="bundle-strategy" class="default-assigner" @checked={{eq
@@ -39,8 +39,8 @@
   {{#if this.build.start.isRunning}}
   <div>Starting...</div>
   {{else}}
-  <button onclick={{action startSelectedProject}} disabled={{if (eq this.selectedProjects.length 0) 'true'
-    }}>Start</button>
+  <button type="submit" {{on "click" (fn this.startSelectedProject)}} disabled={{if (eq this.selectedProjects.length
+    0) 'true' }}>Start</button>
   {{/if}}
   {{/if}}
 </div>
